vhpOU/restJournalList, update:FDL: 8EFB12

--- a/bash/.env
+++ b/bash/.env
@@ -2,4 +2,5 @@ SSH_HOST=18.142.29.189
 SSH_PORT=22
 SSH_USERNAME=vhpadmin
 SSH_KEY_PATH=./DevPyPostgreSQL.pem
-
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+TELEGRAM_CHAT_ID=your_telegram_chat_id  # Use your user ID or group ID
