--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -1,12 +1,10 @@
 # Abaikan semua di functions/
 *
+__pycache__/
+*.pyc
 
 # Izinkan folder
 !*/
-
-# Hanya izinkan isi subfolder1 dan semua levelnya
-!__pycache__/
-!__pycache__/**/*
 
 # Optional: jangan-ignore .gitignore
 !.gitignore
