--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,3 +8,5 @@ deploy_to_production:
         - ./bash/sync_and_restart.sh
     only:
         - production
+    tags:
+        - production-environment
