--- a/backup_/closingan/config.json
+++ b/backup_/closingan/config.json
@@ -4,5 +4,5 @@
     "DB_USER": "postgres",
     "DB_PASSWORD": "DevPostgreSQL#2024",
     "DB_PORT": 5432,
-    "HOTEL_SCHEMA": "qcserverless3"
+    "HOTEL_SCHEMA": "mt2"
 }
