--- a/.env
+++ b/.env
@@ -6,3 +6,11 @@ password=DevPostgreSQL#2024
 gitlab_project_id=40308396
 gitlab_branch=develop
 gitlab_token=glpat-MvsFdKb4b16SyqZXvVqp
+
+DB_HOST= "psql.staging.e1-vhp.com"
+DB_NAME= "qctest"
+DB_USER= "postgres"
+DB_PASSWORD= "DevPostgreSQL#2024"
+DB_PORT= 5432   
+DB_URL= f"postgresql://{DB_USER}:{DB_PASSWORD}@{DB_HOST}:{DB_PORT}/{DB_NAME}"
+APP_PORT= 8000
