Oscar - Fix string format ar aging with balance

--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -17,3 +17,4 @@ __pycache__/
 !additional_functions_pypy.py
 !additional_functions_python.py
 !additional_functions.py
+!more_additional_functions.py
