--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,72 @@
-annotated-types       
-anyio                 
-boto3                 
-botocore              
-cached-property       
-cffi                  
-click                 
-cryptography          
-fastapi               
-greenlet              
-h11                   
-idna                  
-inflection            
-jmespath              
-mangum                
-mypy-extensions       
-pip                   
-psycopg2              
-psycopg2-binary       
-pycparser             
-pydantic              
-pydantic_core         
-python-dateutil       
-pytz                  
-s3transfer            
-setuptools            
-six                   
-sniffio               
-SQLAlchemy            
-sqlalchemy-orm        
-sqlalchemy-serializer 
-SQLAlchemy-Utils      
-starlette             
-typing_extensions     
-typing-inspect        
-urllib3               
-uvicorn               
-watchtower            
-gunicorn
-jinja2
-pyotp
+# Used Python 3.13.2
+
+annotated-types==0.7.0
+anyio==4.9.0
+boto3==1.37.15
+botocore==1.37.15
+cached-property==2.0.1
+cachetools==6.2.1
+certifi==2025.10.5
+cffi==1.17.1
+charset-normalizer==3.4.4
+click==8.1.8
+cryptography==44.0.2
+dotenv==0.9.9
+fastapi==0.115.11
+fuzzywuzzy==0.18.0
+google-api-core==2.26.0
 google-api-python-client==2.185.0
 google-auth==2.41.1
-python-dotenv
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
+googleapis-common-protos==1.70.0
+greenlet==3.1.1
+gunicorn==23.0.0
+h11==0.14.0
+httplib2==0.31.0
+idna==3.10
+inflection==0.5.1
+Jinja2==3.1.6
+jmespath==1.0.1
+mangum==0.19.0
+MarkupSafe==3.0.2
+mypy-extensions==1.0.0
+numpy==2.2.5
+oauthlib==3.3.1
+packaging==24.2
+pandas==2.2.3
+proto-plus==1.26.1
+protobuf==6.33.0
+psutil==7.1.3
+psycopg==3.2.6
+psycopg-binary==3.2.6
+psycopg-pool==3.2.6
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+pyotp==2.9.0
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2024.2
+requests==2.32.5
+requests-oauthlib==2.0.0
+rsa==4.9.1
+s3transfer==0.11.4
+setuptools==70.3.0
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.39
+sqlalchemy-orm==1.2.10
+SQLAlchemy-Utils==0.41.2
+starlette==0.46.1
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2025.2
+uritemplate==4.2.0
+urllib3==2.3.0
+uvicorn==0.34.0
+watchtower==3.4.0
